@@ -21,25 +21,25 @@ package org.ofbiz.manufacturing.mrp;
 
 import java.math.BigDecimal;
 import java.sql.Timestamp;
-import java.util.Calendar;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
-import java.util.ArrayList;
 import java.util.ListIterator;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 
+import javolution.util.FastList;
+import javolution.util.FastMap;
+
 import org.ofbiz.base.util.Debug;
 import org.ofbiz.base.util.UtilDateTime;
+import org.ofbiz.base.util.UtilGenerics;
 import org.ofbiz.base.util.UtilMisc;
+import org.ofbiz.base.util.UtilProperties;
 import org.ofbiz.base.util.UtilValidate;
-import org.ofbiz.entity.GenericDelegator;
+import org.ofbiz.entity.Delegator;
 import org.ofbiz.entity.GenericEntityException;
 import org.ofbiz.entity.GenericValue;
 import org.ofbiz.entity.condition.EntityCondition;
-import org.ofbiz.entity.condition.EntityConditionList;
 import org.ofbiz.entity.condition.EntityExpr;
 import org.ofbiz.entity.condition.EntityFieldMap;
 import org.ofbiz.entity.condition.EntityOperator;
@@ -52,6 +52,8 @@ import org.ofbiz.service.LocalDispatcher;
 import org.ofbiz.service.ModelService;
 import org.ofbiz.service.ServiceUtil;
 
+import com.ibm.icu.util.Calendar;
+
 /**
  * Services for running MRP
  *
@@ -61,76 +63,71 @@ public class MrpServices {
     public static final String module = MrpServices.class.getName();
     public static final String resource = "ManufacturingUiLabels";
 
-    public static Map initMrpEvents(DispatchContext ctx, Map context) {
-        GenericDelegator delegator = ctx.getDelegator();
+    public static Map<String, Object> initMrpEvents(DispatchContext ctx, Map<String, ? extends Object> context) {
+        Delegator delegator = ctx.getDelegator();
         LocalDispatcher dispatcher = ctx.getDispatcher();
         Timestamp now = UtilDateTime.nowTimestamp();
-
+        Locale locale = (Locale) context.get("locale");
         String facilityId = (String)context.get("facilityId");
-        String manufacturingFacilityId = (String)context.get("manufacturingFacilityId");
         Integer defaultYearsOffset = (Integer)context.get("defaultYearsOffset");
         String mrpId = (String)context.get("mrpId");
 
         //Erases the old table for the moment and initializes it with the new orders,
         //Does not modify the old one now.
 
-        List listResult = null;
+        List<GenericValue> listResult = null;
         try {
             listResult = delegator.findList("MrpEvent", null, null, null, null, false);
             //int numOfRecordsRemoved = delegator.removeByCondition("MrpEvent", null);
         } catch (GenericEntityException e) {
             Debug.logError(e,"Error : findList(\"MrpEvent\", null, null, null, null, false)", module);
-            return ServiceUtil.returnError("Problem, we can not find all the items of MrpEvent, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventFindError", locale));
         }
         if (listResult != null) {
             try {
                 delegator.removeAll(listResult);
             } catch (GenericEntityException e) {
                 Debug.logError(e,"Error : removeAll(listResult), listResult ="+listResult, module);
-                return ServiceUtil.returnError("Problem, we can not remove the MrpEvent items, for more detail look at the log");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventRemoveError", locale));
             }
         }
 
         // Proposed requirements are deleted
         listResult = null;
-        List listResultRoles = new ArrayList();
+        List<GenericValue> listResultRoles = FastList.newInstance();
         try {
-            listResult = delegator.findByAnd("Requirement", UtilMisc.toMap("requirementTypeId", "PRODUCT_REQUIREMENT", "statusId", "REQ_PROPOSED"));
+            listResult = delegator.findByAnd("Requirement", UtilMisc.toMap("requirementTypeId", "PRODUCT_REQUIREMENT", "statusId", "REQ_PROPOSED"), null, false);
         } catch (GenericEntityException e) {
-            return ServiceUtil.returnError("Problem, we can not find all the items of MrpEvent, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventFindError", locale));
         }
         if (listResult != null) {
             try {
-                Iterator listResultIt = listResult.iterator();
-                while (listResultIt.hasNext()) {
-                    GenericValue tmpRequirement = (GenericValue)listResultIt.next();
-                    listResultRoles.addAll(tmpRequirement.getRelated("RequirementRole"));
+                for(GenericValue tmpRequirement : listResult) {
+                    listResultRoles.addAll(tmpRequirement.getRelated("RequirementRole", null, null, false));
                     //int numOfRecordsRemoved = delegator.removeRelated("RequirementRole", tmpRequirement);
                 }
                 delegator.removeAll(listResultRoles);
                 delegator.removeAll(listResult);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem, we can not remove the MrpEvent items, for more detail look at the log");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventRemoveError", locale));
             }
         }
         listResult = null;
         try {
-            listResult = delegator.findByAnd("Requirement", UtilMisc.toMap("requirementTypeId", "INTERNAL_REQUIREMENT", "statusId", "REQ_PROPOSED"));
+            listResult = delegator.findByAnd("Requirement", UtilMisc.toMap("requirementTypeId", "INTERNAL_REQUIREMENT", "statusId", "REQ_PROPOSED"), null, false);
         } catch (GenericEntityException e) {
-            return ServiceUtil.returnError("Problem, we can not find all the items of MrpEvent, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventFindError", locale));
         }
         if (listResult != null) {
             try {
                 delegator.removeAll(listResult);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem, we can not remove the MrpEvent items, for more detail look at the log");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventRemoveError", locale));
             }
         }
 
-        GenericValue genericResult = null;
-        Map parameters = null;
-        List resultList = null;
-        Iterator iteratorResult = null;
+        Map<String, Object> parameters = null;
+        List<GenericValue> resultList = null;
         // ----------------------------------------
         // Loads all the approved sales order items and purchase order items
         // ----------------------------------------
@@ -145,19 +142,16 @@ public class MrpServices {
             notAssignedDate = new Timestamp(calendar.getTimeInMillis());
         }
         resultList = null;
-        iteratorResult = null;
-        parameters = UtilMisc.toMap("orderTypeId", "SALES_ORDER", "oiStatusId", "ITEM_APPROVED");
+        parameters = UtilMisc.<String, Object>toMap("orderTypeId", "SALES_ORDER", "oiStatusId", "ITEM_APPROVED");
         parameters.put("facilityId", facilityId);
         try {
-            resultList = delegator.findByAnd("OrderHeaderItemAndShipGroup", parameters, UtilMisc.toList("orderId"));
+            resultList = delegator.findByAnd("OrderHeaderItemAndShipGroup", parameters, UtilMisc.toList("orderId"), false);
         } catch (GenericEntityException e) {
             Debug.logError(e, "Error : findByAnd(\"OrderItem\", parameters\")", module);
             Debug.logError(e, "Error : parameters = "+parameters,module);
-            return ServiceUtil.returnError("Problem, we can not find the order items, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventFindError", locale));
         }
-        iteratorResult = resultList.iterator();
-        while (iteratorResult.hasNext()) {
-            genericResult = (GenericValue) iteratorResult.next();
+        for(GenericValue genericResult : resultList) {
             String productId =  genericResult.getString("productId");
             BigDecimal reservedQuantity = genericResult.getBigDecimal("reservedQuantity");
             BigDecimal shipGroupQuantity = genericResult.getBigDecimal("quantity");
@@ -202,23 +196,21 @@ public class MrpServices {
             try {
                 InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, eventQuantityTmp, null, genericResult.getString("orderId") + "-" + genericResult.getString("orderItemSeqId"), false, delegator);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem initializing the MrpEvent entity (SALES_ORDER_SHIP)");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventProblemInitializing", UtilMisc.toMap("mrpEventTypeId", "SALES_ORDER_SHIP"), locale));
             }
         }
         // ----------------------------------------
         // Loads all the approved product requirements (po requirements)
         // ----------------------------------------
         resultList = null;
-        iteratorResult = null;
-        parameters = UtilMisc.toMap("requirementTypeId", "PRODUCT_REQUIREMENT", "statusId", "REQ_APPROVED", "facilityId", facilityId);
+        parameters = UtilMisc.<String, Object>toMap("requirementTypeId", "PRODUCT_REQUIREMENT",
+                "statusId", "REQ_APPROVED", "facilityId", facilityId);
         try {
-            resultList = delegator.findByAnd("Requirement", parameters);
+            resultList = delegator.findByAnd("Requirement", parameters, null, false);
         } catch (GenericEntityException e) {
-            return ServiceUtil.returnError("Problem, we can not find all the items of MrpEvent, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventFindError", locale));
         }
-        iteratorResult = resultList.iterator();
-        while (iteratorResult.hasNext()) {
-            genericResult = (GenericValue) iteratorResult.next();
+        for(GenericValue genericResult : resultList) {
             String productId =  genericResult.getString("productId");
             BigDecimal eventQuantityTmp = genericResult.getBigDecimal("quantity");
             if (productId == null || eventQuantityTmp == null) {
@@ -233,7 +225,7 @@ public class MrpServices {
             try {
                 InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, eventQuantityTmp, null, genericResult.getString("requirementId"), false, delegator);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem initializing the MrpEvent entity (PROD_REQ_RECP)");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventProblemInitializing", UtilMisc.toMap("mrpEventTypeId", "PROD_REQ_RECP"), locale));
             }
         }
 
@@ -241,30 +233,27 @@ public class MrpServices {
         // Loads all the approved purchase order items
         // ----------------------------------------
         resultList = null;
-        iteratorResult = null;
         String orderId = null;
         GenericValue orderDeliverySchedule = null;
         try {
-            List facilityContactMechs = EntityUtil.filterByDate(delegator.findByAnd("FacilityContactMech", UtilMisc.toMap("facilityId", facilityId)));
-            List facilityContactMechIds = EntityUtil.getFieldListFromEntityList(facilityContactMechs, "contactMechId", true);
-            List searchConditions = UtilMisc.toList(EntityCondition.makeCondition("orderTypeId", EntityOperator.EQUALS, "PURCHASE_ORDER"),
+            List<GenericValue> facilityContactMechs = EntityUtil.filterByDate(delegator.findByAnd("FacilityContactMech", UtilMisc.toMap("facilityId", facilityId), null, false));
+            List<String> facilityContactMechIds = EntityUtil.getFieldListFromEntityList(facilityContactMechs, "contactMechId", true);
+            List<EntityExpr> searchConditions = UtilMisc.toList(EntityCondition.makeCondition("orderTypeId", EntityOperator.EQUALS, "PURCHASE_ORDER"),
                                                     EntityCondition.makeCondition("oiStatusId", EntityOperator.EQUALS, "ITEM_APPROVED"),
                                                     EntityCondition.makeCondition("contactMechId", EntityOperator.IN, facilityContactMechIds));
-            Set fieldsToSelect = UtilMisc.toSet("orderId", "orderItemSeqId", "productId", "quantity", "cancelQuantity", "oiEstimatedDeliveryDate");
+            Set<String> fieldsToSelect = UtilMisc.toSet("orderId", "orderItemSeqId", "productId", "quantity", "cancelQuantity", "oiEstimatedDeliveryDate");
             resultList = delegator.findList("OrderHeaderItemAndShipGroup", EntityCondition.makeCondition(searchConditions, EntityOperator.AND), fieldsToSelect, UtilMisc.toList("orderDate"), null, false);
 
         } catch (GenericEntityException e) {
-            return ServiceUtil.returnError("Problem, we can not find the order items, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventFindError", locale));
         }
-        iteratorResult = resultList.iterator();
-        while (iteratorResult.hasNext()) {
-            genericResult = (GenericValue) iteratorResult.next();
+        for(GenericValue genericResult : resultList) {
             String newOrderId =  genericResult.getString("orderId");
             if (!newOrderId.equals(orderId)) {
                 orderDeliverySchedule = null;
                 orderId = newOrderId;
                 try {
-                    orderDeliverySchedule = delegator.findByPrimaryKey("OrderDeliverySchedule", UtilMisc.toMap("orderId", orderId, "orderItemSeqId", "_NA_"));
+                    orderDeliverySchedule = delegator.findOne("OrderDeliverySchedule", UtilMisc.toMap("orderId", orderId, "orderItemSeqId", "_NA_"), false);
                 } catch (GenericEntityException e) {
                 }
             }
@@ -282,7 +271,7 @@ public class MrpServices {
             OrderReadHelper orh = new OrderReadHelper(delegator, orderId);
             BigDecimal shippedQuantity = null;
             try {
-                shippedQuantity = orh.getItemShippedQuantity(genericResult.getRelatedOne("OrderItem"));
+                shippedQuantity = orh.getItemShippedQuantity(genericResult.getRelatedOne("OrderItem", false));
             } catch (GenericEntityException e) {
             }
             if (UtilValidate.isNotEmpty(shippedQuantity)) {
@@ -291,7 +280,7 @@ public class MrpServices {
 
             GenericValue orderItemDeliverySchedule = null;
             try {
-                orderItemDeliverySchedule = delegator.findByPrimaryKey("OrderDeliverySchedule", UtilMisc.toMap("orderId", orderId, "orderItemSeqId", genericResult.getString("orderItemSeqId")));
+                orderItemDeliverySchedule = delegator.findOne("OrderDeliverySchedule", UtilMisc.toMap("orderId", orderId, "orderItemSeqId", genericResult.getString("orderItemSeqId")), false);
             } catch (GenericEntityException e) {
             }
             Timestamp estimatedShipDate = null;
@@ -310,7 +299,7 @@ public class MrpServices {
             try {
                 InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, shipGroupQuantity, null, genericResult.getString("orderId") + "-" + genericResult.getString("orderItemSeqId"), false, delegator);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem initializing the MrpEvent entity (PUR_ORDER_RECP)");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventProblemInitializing", UtilMisc.toMap("mrpEventTypeId", "PUR_ORDER_RECP"), locale));
             }
         }
 
@@ -318,95 +307,89 @@ public class MrpServices {
         // PRODUCTION Run: components
         // ----------------------------------------
         resultList = null;
-        iteratorResult = null;
-        parameters = UtilMisc.toMap("workEffortGoodStdTypeId", "PRUNT_PROD_NEEDED", "statusId", "WEGS_CREATED", "facilityId", facilityId);
+        parameters = UtilMisc.<String, Object>toMap("workEffortGoodStdTypeId", "PRUNT_PROD_NEEDED",
+                   "statusId", "WEGS_CREATED", "facilityId", facilityId);
         try {
-            resultList = delegator.findByAnd("WorkEffortAndGoods", parameters);
-        } catch (GenericEntityException e) {
-            Debug.logError(e, "Error : findByAnd(\"OrderItem\", parameters\")", module);
-            Debug.logError(e, "Error : parameters = "+parameters,module);
-            return ServiceUtil.returnError("Problem, we can not find the order items, for more detail look at the log");
-        }
-        iteratorResult = resultList.iterator();
-        while (iteratorResult.hasNext()) {
-            genericResult = (GenericValue) iteratorResult.next();
-            String productId =  genericResult.getString("productId");
-            BigDecimal eventQuantityTmp = genericResult.getBigDecimal("estimatedQuantity").negate();
-            Timestamp estimatedShipDate = genericResult.getTimestamp("estimatedStartDate");
-            if (estimatedShipDate == null) {
-                estimatedShipDate = now;
-            }
+            resultList = delegator.findByAnd("WorkEffortAndGoods", parameters, null, false);
+            for(GenericValue genericResult : resultList) {
+                if ("PRUN_CLOSED".equals(genericResult.getString("currentStatusId")) ||
+                    "PRUN_COMPLETED".equals(genericResult.getString("currentStatusId")) ||
+                    "PRUN_CANCELLED".equals(genericResult.getString("currentStatusId"))) {
+                    continue;
+                }
+                String productId =  genericResult.getString("productId");
+                // get the inventory already consumed
+                BigDecimal consumedInventoryTotal = BigDecimal.ZERO;
+                List<GenericValue> consumedInventoryItems = delegator.findByAnd("WorkEffortAndInventoryAssign", UtilMisc.toMap("workEffortId", genericResult.getString("workEffortId"), "productId", productId), null, false);
+                for (GenericValue consumedInventoryItem : consumedInventoryItems) {
+                    consumedInventoryTotal = consumedInventoryTotal.add(consumedInventoryItem.getBigDecimal("quantity"));
+                }
+                BigDecimal eventQuantityTmp = consumedInventoryTotal.subtract(genericResult.getBigDecimal("estimatedQuantity"));
+                Timestamp estimatedShipDate = genericResult.getTimestamp("estimatedStartDate");
+                if (estimatedShipDate == null) {
+                    estimatedShipDate = now;
+                }
 
-            parameters = UtilMisc.toMap("mrpId", mrpId, "productId", productId, "eventDate", estimatedShipDate, "mrpEventTypeId", "MANUF_ORDER_REQ");
-            try {
+                parameters = UtilMisc.toMap("mrpId", mrpId, "productId", productId, "eventDate", estimatedShipDate, "mrpEventTypeId", "MANUF_ORDER_REQ");
                 String eventName = (UtilValidate.isEmpty(genericResult.getString("workEffortParentId"))? genericResult.getString("workEffortId"): genericResult.getString("workEffortParentId") + "-" + genericResult.getString("workEffortId"));
                 InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, eventQuantityTmp, null, eventName, false, delegator);
-            } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem initializing the MrpEvent entity (MRP_REQUIREMENT)");
             }
+        } catch (GenericEntityException e) {
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventProblemInitializing", UtilMisc.toMap("mrpEventTypeId", "MANUF_ORDER_REQ"), locale) + " " + e.getMessage());
         }
 
         // ----------------------------------------
         // PRODUCTION Run: product produced
         // ----------------------------------------
         resultList = null;
-        iteratorResult = null;
-        parameters = UtilMisc.toMap("workEffortGoodStdTypeId", "PRUN_PROD_DELIV", "statusId", "WEGS_CREATED", "workEffortTypeId", "PROD_ORDER_HEADER", "facilityId", facilityId);
+        parameters = UtilMisc.<String, Object>toMap("workEffortGoodStdTypeId", "PRUN_PROD_DELIV",
+                "statusId", "WEGS_CREATED", "workEffortTypeId", "PROD_ORDER_HEADER", "facilityId", facilityId);
         try {
-            resultList = delegator.findByAnd("WorkEffortAndGoods", parameters);
-        } catch (GenericEntityException e) {
-            Debug.logError(e, "Error : findByAnd(\"OrderItem\", parameters\")", module);
-            Debug.logError(e, "Error : parameters = "+parameters,module);
-            return ServiceUtil.returnError("Problem, we can not find the order items, for more detail look at the log");
-        }
-        iteratorResult = resultList.iterator();
-        while (iteratorResult.hasNext()) {
-            genericResult = (GenericValue) iteratorResult.next();
-            if ("PRUN_CLOSED".equals(genericResult.getString("currentStatusId"))) {
-                continue;
-            }
-            BigDecimal qtyToProduce = genericResult.getBigDecimal("quantityToProduce");
-            if (qtyToProduce == null) {
-                qtyToProduce = BigDecimal.ZERO;
-            }
-            BigDecimal qtyProduced = genericResult.getBigDecimal("quantityProduced");
-            if (qtyProduced == null) {
-                qtyProduced = BigDecimal.ZERO;
-            }
-            if (qtyProduced.compareTo(qtyToProduce) >= 0) {
-                continue;
-            }
-            BigDecimal qtyDiff = qtyToProduce.subtract(qtyProduced);
-            String productId =  genericResult.getString("productId");
-            BigDecimal eventQuantityTmp = qtyDiff;
-            Timestamp estimatedShipDate = genericResult.getTimestamp("estimatedCompletionDate");
-            if (estimatedShipDate == null) {
-                estimatedShipDate = now;
-            }
+            resultList = delegator.findByAnd("WorkEffortAndGoods", parameters, null, false);
+            for(GenericValue genericResult : resultList) {
+                if ("PRUN_CLOSED".equals(genericResult.getString("currentStatusId")) ||
+                    "PRUN_COMPLETED".equals(genericResult.getString("currentStatusId")) ||
+                    "PRUN_CANCELLED".equals(genericResult.getString("currentStatusId"))) {
+                    continue;
+                }
+                BigDecimal qtyToProduce = genericResult.getBigDecimal("quantityToProduce");
+                if (qtyToProduce == null) {
+                    qtyToProduce = BigDecimal.ZERO;
+                }
+                BigDecimal qtyProduced = genericResult.getBigDecimal("quantityProduced");
+                if (qtyProduced == null) {
+                    qtyProduced = BigDecimal.ZERO;
+                }
+                if (qtyProduced.compareTo(qtyToProduce) >= 0) {
+                    continue;
+                }
+                BigDecimal qtyDiff = qtyToProduce.subtract(qtyProduced);
+                String productId =  genericResult.getString("productId");
+                BigDecimal eventQuantityTmp = qtyDiff;
+                Timestamp estimatedShipDate = genericResult.getTimestamp("estimatedCompletionDate");
+                if (estimatedShipDate == null) {
+                    estimatedShipDate = now;
+                }
 
-            parameters = UtilMisc.toMap("mrpId", mrpId, "productId", productId, "eventDate", estimatedShipDate, "mrpEventTypeId", "MANUF_ORDER_RECP");
-            try {
+                parameters = UtilMisc.toMap("mrpId", mrpId, "productId", productId, "eventDate", estimatedShipDate, "mrpEventTypeId", "MANUF_ORDER_RECP");
                 InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, eventQuantityTmp, null, genericResult.getString("workEffortId"), false, delegator);
-            } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem initializing the MrpEvent entity (MANUF_ORDER_RECP)");
             }
+        } catch (GenericEntityException e) {
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventProblemInitializing", UtilMisc.toMap("mrpEventTypeId", "MANUF_ORDER_RECP"), locale) + " " + e.getMessage());
         }
 
         // ----------------------------------------
         // Products without upcoming events but that are already under minimum quantity in warehouse
         // ----------------------------------------
         resultList = null;
-        iteratorResult = null;
-        parameters = UtilMisc.toMap("facilityId", facilityId);
+        parameters = UtilMisc.<String, Object>toMap("facilityId", facilityId);
         try {
-            resultList = delegator.findByAnd("ProductFacility", parameters);
+            resultList = delegator.findByAnd("ProductFacility", parameters, null, false);
         } catch (GenericEntityException e) {
             Debug.logError(e, "Unable to retrieve ProductFacility records.", module);
-            return ServiceUtil.returnError("Unable to retrieve ProductFacility records.");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCannotFindProductFacility", locale));
         }
-        iteratorResult = resultList.iterator();
-        while (iteratorResult.hasNext()) {
-            genericResult = (GenericValue) iteratorResult.next();
+        for(GenericValue genericResult : resultList) {
             String productId = genericResult.getString("productId");
             BigDecimal minimumStock = genericResult.getBigDecimal("minimumStock");
             if (minimumStock == null) {
@@ -420,7 +403,7 @@ public class MrpServices {
                 }
             } catch (GenericEntityException e) {
                 Debug.logError(e, "Unable to count MrpEvent records.", module);
-                return ServiceUtil.returnError("Unable to count MrpEvent records.");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCannotCountRecords", locale));
             }
             BigDecimal qoh = findProductMrpQoh(mrpId, productId, facilityId, dispatcher, delegator);
             if (qoh.compareTo(minimumStock) >= 0) {
@@ -430,7 +413,7 @@ public class MrpServices {
             try {
                 InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, BigDecimal.ZERO, null, null, false, delegator);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem initializing the MrpEvent entity (REQUIRED_MRP)");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventProblemInitializing", UtilMisc.toMap("mrpEventTypeId", "REQUIRED_MRP"), locale));
             }
         }
 
@@ -438,58 +421,54 @@ public class MrpServices {
         // SALES FORECASTS
         // ----------------------------------------
         resultList = null;
-        iteratorResult = null;
         GenericValue facility = null;
         try {
             facility = delegator.findOne("Facility", UtilMisc.toMap("facilityId", facilityId), false);
         } catch (GenericEntityException e) {
-            return ServiceUtil.returnError("Problem, we can not find Facility, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventFindError", locale));
         }
         String partyId =  (String)facility.get("ownerPartyId");
         try {
-            resultList = delegator.findByAnd("SalesForecast", UtilMisc.toMap("organizationPartyId", partyId));
+            resultList = delegator.findByAnd("SalesForecast", UtilMisc.toMap("organizationPartyId", partyId), null, false);
         } catch (GenericEntityException e) {
-            return ServiceUtil.returnError("Problem, we can not find SalesForecasts, for more detail look at the log");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCannotFindSalesForecasts", locale));
         }
-        iteratorResult = resultList.iterator();
-        while (iteratorResult.hasNext()) {
-            genericResult = (GenericValue) iteratorResult.next();
+        for(GenericValue genericResult : resultList) {
             String customTimePeriodId =  genericResult.getString("customTimePeriodId");
             GenericValue customTimePeriod = null;
             try {
                 customTimePeriod = delegator.findOne("CustomTimePeriod", UtilMisc.toMap("customTimePeriodId", customTimePeriodId), false);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem, we can not find CustomTimePeriod, for more detail look at the log");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCannotFindCustomTimePeriod", locale));
             }
-            if (customTimePeriod.getDate("thruDate").before(UtilDateTime.nowDate())) {
-                continue;
-            } else {
-                List salesForecastDetails = null;
-                Iterator sfdIter = null;
-                try {
-                    salesForecastDetails = delegator.findByAnd("SalesForecastDetail", UtilMisc.toMap("salesForecastId", genericResult.getString("salesForecastId")));
-                } catch (GenericEntityException e) {
-                    return ServiceUtil.returnError("Problem, we can not find SalesForecastDetails, for more detail look at the log");
-                }
-                sfdIter = salesForecastDetails.iterator();
-                while (sfdIter.hasNext()) {
-                    genericResult = (GenericValue) sfdIter.next();
-                    String productId =  genericResult.getString("productId");
-                    BigDecimal eventQuantityTmp = genericResult.getBigDecimal("quantity");
-                    if (productId == null || eventQuantityTmp == null) {
-                        continue;
-                    }
-                    eventQuantityTmp = eventQuantityTmp.negate();
-                    parameters = UtilMisc.toMap("mrpId", mrpId, "productId", productId, "eventDate", customTimePeriod.getDate("fromDate"), "mrpEventTypeId", "SALES_FORECAST");
+            if (customTimePeriod != null) {
+                if (customTimePeriod.getDate("thruDate") != null && customTimePeriod.getDate("thruDate").before(UtilDateTime.nowDate())) {
+                    continue;
+                } else {
+                    List<GenericValue> salesForecastDetails = null;
                     try {
-                        InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, eventQuantityTmp, null, genericResult.getString("salesForecastDetailId"), false, delegator);
+                        salesForecastDetails = delegator.findByAnd("SalesForecastDetail", UtilMisc.toMap("salesForecastId", genericResult.getString("salesForecastId")), null, false);
                     } catch (GenericEntityException e) {
-                        return ServiceUtil.returnError("Problem initializing the MrpEvent entity (SalesForecastDetail)");
+                        return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCannotFindSalesForecastDetails", locale));
+                    }
+                    for(GenericValue sfd : salesForecastDetails) {
+                        String productId =  sfd.getString("productId");
+                        BigDecimal eventQuantityTmp = sfd.getBigDecimal("quantity");
+                        if (productId == null || eventQuantityTmp == null) {
+                            continue;
+                        }
+                        eventQuantityTmp = eventQuantityTmp.negate();
+                        parameters = UtilMisc.toMap("mrpId", mrpId, "productId", productId, "eventDate", customTimePeriod.getDate("fromDate"), "mrpEventTypeId", "SALES_FORECAST");
+                        try {
+                            InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, eventQuantityTmp, null, sfd.getString("salesForecastDetailId"), false, delegator);
+                        } catch (GenericEntityException e) {
+                            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpEventProblemInitializing", UtilMisc.toMap("mrpEventTypeId", "SALES_FORECAST"), locale));
+                        }
                     }
                 }
             }
         }
-        Map result = new HashMap();
+        Map<String, Object> result = FastMap.newInstance();
         result.put(ModelService.RESPONSE_MESSAGE, ModelService.RESPOND_SUCCESS);
         Debug.logInfo("return from initMrpEvent", module);
         return result;
@@ -503,11 +482,11 @@ public class MrpServices {
      * @param product the product for which the Quantity Available is required
      * @return the sum of all the totalAvailableToPromise of the inventoryItem related to the product, if the related facility is Mrp available (not yet implemented!!)
      */
-    public static BigDecimal findProductMrpQoh(String mrpId, GenericValue product, String facilityId, LocalDispatcher dispatcher, GenericDelegator delegator) {
+    public static BigDecimal findProductMrpQoh(String mrpId, GenericValue product, String facilityId, LocalDispatcher dispatcher, Delegator delegator) {
         return findProductMrpQoh(mrpId, product.getString("productId"), facilityId, dispatcher, delegator);
     }
-    public static BigDecimal findProductMrpQoh(String mrpId, String productId, String facilityId, LocalDispatcher dispatcher, GenericDelegator delegator) {
-        Map resultMap = null;
+    public static BigDecimal findProductMrpQoh(String mrpId, String productId, String facilityId, LocalDispatcher dispatcher, Delegator delegator) {
+        Map<String, Object> resultMap = null;
         try {
             if (facilityId == null) {
                 resultMap = dispatcher.runSync("getProductInventoryAvailable", UtilMisc.toMap("productId", productId));
@@ -522,10 +501,10 @@ public class MrpServices {
         return ((BigDecimal)resultMap.get("quantityOnHandTotal"));
     }
 
-    public static void logMrpError(String mrpId, String productId, String errorMessage, GenericDelegator delegator) {
+    public static void logMrpError(String mrpId, String productId, String errorMessage, Delegator delegator) {
         logMrpError(mrpId, productId, UtilDateTime.nowTimestamp(), errorMessage, delegator);
     }
-    public static void logMrpError(String mrpId, String productId, Timestamp eventDate, String errorMessage, GenericDelegator delegator) {
+    public static void logMrpError(String mrpId, String productId, Timestamp eventDate, String errorMessage, Delegator delegator) {
         try {
             if (UtilValidate.isNotEmpty(productId) && UtilValidate.isNotEmpty(errorMessage)) {
                 GenericValue inventoryEventError = delegator.makeValue("MrpEvent", UtilMisc.toMap("productId", productId,
@@ -542,23 +521,21 @@ public class MrpServices {
 
     /**
      * Process the bill of material (bom) of the product  to insert components in the MrpEvent table.
-     *   Before inserting in the entity, test if there is the record already existing to add quantity rather to create a new one.
-     *
-     * @param product
+     * Before inserting in the entity, test if there is the record already existing to add quantity rather to create a new one.
+     * @param mrpId the mrp id
+     * @param product GenericValue oject of the product
      * @param eventQuantity the product quantity needed
-     *  @param startDate the startDate of the productionRun which will used to produce the product
-     *  @param routingTaskStartDate Map with all the routingTask as keys and startDate of each of them
-     * @return None
+     * @param startDate the startDate of the productionRun which will used to produce the product
+     * @param routingTaskStartDate Map with all the routingTask as keys and startDate of each of them
+     * @param listComponent a List with all the components
      */
 
-    public static void processBomComponent(String mrpId, GenericValue product, BigDecimal eventQuantity, Timestamp startDate, Map routingTaskStartDate, List listComponent) {
+    public static void processBomComponent(String mrpId, GenericValue product, BigDecimal eventQuantity, Timestamp startDate, Map<String, Object> routingTaskStartDate, List<BOMNode> listComponent) {
         // TODO : change the return type to boolean to be able to test if all is ok or if it have had a exception
-        GenericDelegator delegator = product.getDelegator();
+        Delegator delegator = product.getDelegator();
 
         if (UtilValidate.isNotEmpty(listComponent)) {
-            Iterator listComponentIter = listComponent.iterator();
-            while (listComponentIter.hasNext()) {
-                BOMNode node = (BOMNode) listComponentIter.next();
+            for(BOMNode node : listComponent) {
                 GenericValue productComponent = node.getProductAssoc();
                 // read the startDate for the component
                 String routingTask = node.getProductAssoc().getString("routingWorkEffortId");
@@ -566,7 +543,7 @@ public class MrpServices {
                 // if the components is valid at the event Date create the Mrp requirement in the M entity
                 if (EntityUtil.isValueActive(productComponent, eventDate)) {
                     //Map parameters = UtilMisc.toMap("productId", productComponent.getString("productIdTo"));
-                    Map parameters = UtilMisc.toMap("productId", node.getProduct().getString("productId"));
+                    Map<String, Object> parameters = UtilMisc.<String, Object>toMap("productId", node.getProduct().getString("productId"));
                     parameters.put("mrpId", mrpId);
                     parameters.put("eventDate", eventDate);
                     parameters.put("mrpEventTypeId", "MRP_REQUIREMENT");
@@ -574,7 +551,7 @@ public class MrpServices {
                     try {
                         InventoryEventPlannedServices.createOrUpdateMrpEvent(parameters, componentEventQuantity.negate(), null, product.get("productId") + ": " + eventDate, false, delegator);
                     } catch (GenericEntityException e) {
-                        Debug.logError("Error : findByPrimaryKey(\"MrpEvent\", parameters) ="+parameters+"--"+e.getMessage(), module);
+                        Debug.logError("Error : findOne(\"MrpEvent\", parameters) ="+parameters+"--"+e.getMessage(), module);
                         logMrpError(mrpId, node.getProduct().getString("productId"), "Unable to create event (processBomComponent)", delegator);
                     }
                 }
@@ -596,36 +573,33 @@ public class MrpServices {
      * @param context Map containing the input parameters, productId routingId, quantity, startDate.
      * @return Map with the result of the service, the output parameters.
      */
-    public static Map executeMrp(DispatchContext ctx, Map context) {
+    public static Map<String, Object> executeMrp(DispatchContext ctx, Map<String, ? extends Object> context) {
         Debug.logInfo("executeMrp called", module);
-
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         LocalDispatcher dispatcher = ctx.getDispatcher();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
         Timestamp now = UtilDateTime.nowTimestamp();
-
+        Locale locale = (Locale) context.get("locale");
         String mrpName = (String)context.get("mrpName");
         Integer defaultYearsOffset = (Integer)context.get("defaultYearsOffset");
         String facilityGroupId = (String)context.get("facilityGroupId");
         String facilityId = (String)context.get("facilityId");
         String manufacturingFacilityId = null;
         if (UtilValidate.isEmpty(facilityId) && UtilValidate.isEmpty(facilityGroupId)) {
-            return ServiceUtil.returnError("facilityId and facilityGroupId cannot be both null");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpFacilityNotAvailable", locale));
         }
         if (UtilValidate.isEmpty(facilityId)) {
             try {
-                GenericValue facilityGroup = delegator.findByPrimaryKey("FacilityGroup", UtilMisc.toMap("facilityGroupId", facilityGroupId));
+                GenericValue facilityGroup = delegator.findOne("FacilityGroup", UtilMisc.toMap("facilityGroupId", facilityGroupId), false);
                 if (UtilValidate.isEmpty(facilityGroup)) {
-                    return ServiceUtil.returnError("facilityGroupId [" + facilityGroupId + "] is not valid");
+                    return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpFacilityGroupIsNotValid", UtilMisc.toMap("facilityGroupId", facilityGroupId), locale));
                 }
-                List facilities = facilityGroup.getRelated("FacilityGroupMember", UtilMisc.toList("sequenceNum"));
+                List<GenericValue> facilities = facilityGroup.getRelated("FacilityGroupMember", null, UtilMisc.toList("sequenceNum"), false);
                 if (UtilValidate.isEmpty(facilities)) {
-                    return ServiceUtil.returnError("No facility associated to facilityGroupId [" + facilityGroupId + "]");
+                    return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpFacilityGroupIsNotAssociatedToFacility", UtilMisc.toMap("facilityGroupId", facilityGroupId), locale));
                 }
-                Iterator facilitiesIt = facilities.iterator();
-                while (facilitiesIt.hasNext()) {
-                    GenericValue facilityMember = (GenericValue)facilitiesIt.next();
-                    GenericValue facility = facilityMember.getRelatedOne("Facility");
+                for(GenericValue facilityMember : facilities) {
+                    GenericValue facility = facilityMember.getRelatedOne("Facility", false);
                     if ("WAREHOUSE".equals(facility.getString("facilityTypeId")) && UtilValidate.isEmpty(facilityId)) {
                         facilityId = facility.getString("facilityId");
                     }
@@ -634,14 +608,14 @@ public class MrpServices {
                     }
                 }
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("Problem loading facility group information: " + e.getMessage());
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpFacilityGroupCannotBeLoad", UtilMisc.toMap("errorString", e.getMessage()), locale));
             }
         } else {
             manufacturingFacilityId = facilityId;
         }
 
         if (UtilValidate.isEmpty(facilityId) || UtilValidate.isEmpty(manufacturingFacilityId)) {
-            return ServiceUtil.returnError("facilityId and manufacturingFacilityId cannot be null");
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpFacilityOrManufacturingFacilityNotAvailable", locale));
         }
 
         int bomLevelWithNoEvent = 0;
@@ -652,31 +626,28 @@ public class MrpServices {
         GenericValue productFacility = null;
         BigDecimal eventQuantity = BigDecimal.ZERO;
         Timestamp eventDate = null;
-        boolean isNegative = false;
-        BigDecimal quantityNeeded = BigDecimal.ZERO;
         BigDecimal reorderQuantity = BigDecimal.ZERO;
         BigDecimal minimumStock = BigDecimal.ZERO;
         int daysToShip = 0;
-        List components = null;
+        List<BOMNode> components = null;
         boolean isBuilt = false;
         GenericValue routing = null;
 
         String mrpId = delegator.getNextSeqId("MrpEvent");
 
-        Map result = null;
-        Map parameters = null;
-        List listInventoryEventForMRP = null;
-        ListIterator iteratorListInventoryEventForMRP = null;
-        GenericValue inventoryEventForMRP = null;
+        Map<String, Object> result = null;
+        Map<String, Object> parameters = null;
+        List<GenericValue> listInventoryEventForMRP = null;
+        ListIterator<GenericValue> iteratorListInventoryEventForMRP = null;
 
         // Initialization of the MrpEvent table, This table will contain the products we want to buy or build.
-        parameters = UtilMisc.toMap("mrpId", mrpId, "reInitialize", Boolean.TRUE, "defaultYearsOffset", defaultYearsOffset, "userLogin", userLogin);
+        parameters = UtilMisc.<String, Object>toMap("mrpId", mrpId, "reInitialize", Boolean.TRUE, "defaultYearsOffset", defaultYearsOffset, "userLogin", userLogin);
         parameters.put("facilityId", facilityId);
         parameters.put("manufacturingFacilityId", manufacturingFacilityId);
         try {
             result = dispatcher.runSync("initMrpEvents", parameters);
         } catch (GenericServiceException e) {
-            return ServiceUtil.returnError("Error running the initMrpEvents service: " + e.getMessage());
+            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpErrorRunningInitMrpEvents", UtilMisc.toMap("errorString", e.getMessage()), locale));
         }
         long bomLevel = 0;
         do {
@@ -685,23 +656,22 @@ public class MrpServices {
             if (bomLevel == 0) {
                 filterByConditions = EntityCondition.makeCondition(EntityCondition.makeCondition("billOfMaterialLevel", EntityOperator.EQUALS, null),
                                             EntityOperator.OR,
-                                            EntityCondition.makeCondition("billOfMaterialLevel", EntityOperator.EQUALS, new Long(bomLevel)));
+                                            EntityCondition.makeCondition("billOfMaterialLevel", EntityOperator.EQUALS, Long.valueOf(bomLevel)));
             } else {
-                filterByConditions = EntityCondition.makeCondition("billOfMaterialLevel", EntityOperator.EQUALS, new Long(bomLevel));
+                filterByConditions = EntityCondition.makeCondition("billOfMaterialLevel", EntityOperator.EQUALS, Long.valueOf(bomLevel));
             }
             try {
                 listInventoryEventForMRP = delegator.findList("MrpEventView", filterByConditions, null, UtilMisc.toList("productId", "eventDate"), null, false);
             } catch (GenericEntityException e) {
-                return ServiceUtil.returnError("MRP Error retieving MRP event for the bom level: " + bomLevel + ". Error: " + e.getMessage());
+                Long bomLevelToString = new Long(bomLevel);
+                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpErrorForBomLevel", UtilMisc.toMap("bomLevel", bomLevelToString.toString(), "errorString", e.getMessage()), locale));
             }
 
             if (UtilValidate.isNotEmpty(listInventoryEventForMRP)) {
                 bomLevelWithNoEvent = 0;
-                iteratorListInventoryEventForMRP = listInventoryEventForMRP.listIterator();
 
                 oldProductId = "";
-                while (iteratorListInventoryEventForMRP.hasNext()) {
-                    inventoryEventForMRP = (GenericValue) iteratorListInventoryEventForMRP.next();
+                for(GenericValue inventoryEventForMRP : listInventoryEventForMRP) {
                     productId = inventoryEventForMRP.getString("productId");
                     eventQuantity = inventoryEventForMRP.getBigDecimal("quantity");
 
@@ -709,18 +679,19 @@ public class MrpServices {
                         BigDecimal positiveEventQuantity = eventQuantity.compareTo(BigDecimal.ZERO) > 0 ? eventQuantity: eventQuantity.negate();
                         // It's a new product, so it's necessary to  read the MrpQoh
                         try {
-                            product = inventoryEventForMRP.getRelatedOneCache("Product");
-                            productFacility = EntityUtil.getFirst(product.getRelatedByAndCache("ProductFacility", UtilMisc.toMap("facilityId", facilityId)));
+                            product = inventoryEventForMRP.getRelatedOne("Product", true);
+                            productFacility = EntityUtil.getFirst(product.getRelated("ProductFacility", UtilMisc.toMap("facilityId", facilityId), null, true));
                         } catch (GenericEntityException e) {
-                            return ServiceUtil.returnError("Problem, can not find the product for a event, for more detail look at the log");
+                            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCannotFindProductForEvent", locale));
                         }
                         stockTmp = findProductMrpQoh(mrpId, product, facilityId, dispatcher, delegator);
                         try {
-                            InventoryEventPlannedServices.createOrUpdateMrpEvent(UtilMisc.toMap("mrpId", mrpId, "productId", product.getString("productId"), "mrpEventTypeId", "INITIAL_QOH", "eventDate", now),
-                                                                                              stockTmp, facilityId, null, false,
-                                                                                              delegator);
+                            InventoryEventPlannedServices.createOrUpdateMrpEvent(UtilMisc.<String, Object>toMap("mrpId", mrpId,
+                                    "productId", product.getString("productId"), 
+                                    "mrpEventTypeId", "INITIAL_QOH", "eventDate", now), 
+                                    stockTmp, facilityId, null, false, delegator);
                         } catch (GenericEntityException e) {
-                            return ServiceUtil.returnError("Problem running createOrUpdateMrpEvent");
+                            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCreateOrUpdateEvent", UtilMisc.toMap("parameters", parameters), locale));
                         }
                         // days to ship is only relevant for sales order to plan for preparatory days to ship.  Otherwise MRP will push event dates for manufacturing parts
                         // as well and cause problems
@@ -737,15 +708,15 @@ public class MrpServices {
                         }
                         // -----------------------------------------------------
                         // The components are also loaded thru the configurator
-                        Map serviceResponse = null;
+                        Map<String, Object> serviceResponse = null;
                         try {
                             serviceResponse = dispatcher.runSync("getManufacturingComponents", UtilMisc.<String, Object>toMap("productId", product.getString("productId"), "quantity", positiveEventQuantity, "excludeWIPs", Boolean.FALSE, "userLogin", userLogin));
                         } catch (Exception e) {
-                            return ServiceUtil.returnError("An error occurred exploding the product [" + product.getString("productId") + "]");
+                            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpErrorExplodingProduct", UtilMisc.toMap("productId", product.getString("productId")), locale));
                         }
-                        components = (List)serviceResponse.get("components");
+                        components = UtilGenerics.checkList(serviceResponse.get("components"));
                         if (UtilValidate.isNotEmpty(components)) {
-                            BOMNode node = ((BOMNode)components.get(0)).getParentNode();
+                            BOMNode node = (components.get(0)).getParentNode();
                             isBuilt = node.isManufactured();
                         } else {
                             isBuilt = false;
@@ -769,25 +740,25 @@ public class MrpServices {
 
                         // -----------------------------------------------------
                         // The components are also loaded thru the configurator
-                        Map serviceResponse = null;
+                        Map<String, Object> serviceResponse = null;
                         try {
                             serviceResponse = dispatcher.runSync("getManufacturingComponents", UtilMisc.<String, Object>toMap("productId", product.getString("productId"), "quantity", proposedOrder.getQuantity(), "excludeWIPs", Boolean.FALSE, "userLogin", userLogin));
                         } catch (Exception e) {
-                            return ServiceUtil.returnError("An error occurred exploding the product [" + product.getString("productId") + "]");
+                            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpErrorExplodingProduct", UtilMisc.toMap("productId", product.getString("productId")), locale));
                         }
-                        components = (List)serviceResponse.get("components");
+                        components = UtilGenerics.checkList(serviceResponse.get("components"));
                         String routingId = (String)serviceResponse.get("workEffortId");
                         if (routingId != null) {
                             try {
-                                routing = delegator.findByPrimaryKey("WorkEffort", UtilMisc.toMap("workEffortId", routingId));
+                                routing = delegator.findOne("WorkEffort", UtilMisc.toMap("workEffortId", routingId), false);
                             } catch (GenericEntityException e) {
-                                return ServiceUtil.returnError("Problem, can not find the product for a event, for more detail look at the log");
+                                return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCannotFindProductForEvent", locale));
                             }
                         } else {
                             routing = null;
                         }
                         if (UtilValidate.isNotEmpty(components)) {
-                            BOMNode node = ((BOMNode)components.get(0)).getParentNode();
+                            BOMNode node = (components.get(0)).getParentNode();
                             isBuilt = node.isManufactured();
                         } else {
                             isBuilt = false;
@@ -795,7 +766,7 @@ public class MrpServices {
                         // #####################################################
 
                         // calculate the ProposedOrder requirementStartDate and update the requirementStartDate object property.
-                        Map routingTaskStartDate = proposedOrder.calculateStartDate(daysToShip, routing, delegator, dispatcher, userLogin);
+                        Map<String, Object> routingTaskStartDate = proposedOrder.calculateStartDate(daysToShip, routing, delegator, dispatcher, userLogin);
                         if (isBuilt) {
                             // process the product components
                             processBomComponent(mrpId, product, proposedOrder.getQuantity(), proposedOrder.getRequirementStartDate(), routingTaskStartDate, components);
@@ -812,14 +783,14 @@ public class MrpServices {
                         if (UtilValidate.isNotEmpty(requirementId)) {
                             eventName = "*" + requirementId + " (" + proposedOrder.getRequirementStartDate() + ")*";
                         }
-                        Map eventMap = UtilMisc.toMap("productId", product.getString("productId"),
+                        Map<String, Object> eventMap = UtilMisc.<String, Object>toMap("productId", product.getString("productId"),
                                                       "mrpId", mrpId,
                                                       "eventDate", eventDate,
                                                       "mrpEventTypeId", (isBuilt? "PROP_MANUF_O_RECP" : "PROP_PUR_O_RECP"));
                         try {
                             InventoryEventPlannedServices.createOrUpdateMrpEvent(eventMap, proposedOrder.getQuantity(), null, eventName, (proposedOrder.getRequirementStartDate().compareTo(now) < 0), delegator);
                         } catch (GenericEntityException e) {
-                            return ServiceUtil.returnError("Problem running createOrUpdateMrpEvent");
+                            return ServiceUtil.returnError(UtilProperties.getMessage(resource, "ManufacturingMrpCreateOrUpdateEvent", UtilMisc.toMap("parameters", parameters), locale));
                         }
                         //
                         stockTmp = stockTmp.add(proposedOrder.getQuantity());
@@ -833,9 +804,9 @@ public class MrpServices {
             // if there are 3 levels with no inventoryEvenPanned we stop
         } while (bomLevelWithNoEvent < 3);
 
-        result =  new HashMap();
-        List msgResult = new LinkedList();
-        result.put("msgResult",msgResult);
+        result = FastMap.newInstance();
+        List<Object> msgResult = FastList.newInstance();
+        result.put("msgResult", msgResult);
         result.put(ModelService.RESPONSE_MESSAGE, ModelService.RESPOND_SUCCESS);
         Debug.logInfo("return from executeMrp", module);
         return result;
