@@ -20,7 +20,6 @@
 package org.ofbiz.workeffort.workeffort;
 
 import java.sql.Timestamp;
-import java.util.Calendar;
 import java.util.Collection;
 import java.util.Date;
 import java.util.List;
@@ -28,6 +27,8 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.TimeZone;
+import java.util.TreeMap;
+import java.util.TreeSet;
 
 import javolution.util.FastList;
 import javolution.util.FastMap;
@@ -41,7 +42,7 @@ import org.ofbiz.base.util.UtilGenerics;
 import org.ofbiz.base.util.UtilMisc;
 import org.ofbiz.base.util.UtilProperties;
 import org.ofbiz.base.util.UtilValidate;
-import org.ofbiz.entity.GenericDelegator;
+import org.ofbiz.entity.Delegator;
 import org.ofbiz.entity.GenericEntityException;
 import org.ofbiz.entity.GenericValue;
 import org.ofbiz.entity.condition.EntityCondition;
@@ -49,13 +50,18 @@ import org.ofbiz.entity.condition.EntityConditionList;
 import org.ofbiz.entity.condition.EntityExpr;
 import org.ofbiz.entity.condition.EntityJoinOperator;
 import org.ofbiz.entity.condition.EntityOperator;
+import org.ofbiz.entity.model.ModelEntity;
+import org.ofbiz.entity.util.EntityListIterator;
 import org.ofbiz.entity.util.EntityUtil;
 import org.ofbiz.security.Security;
 import org.ofbiz.service.DispatchContext;
+import org.ofbiz.service.GenericServiceException;
 import org.ofbiz.service.LocalDispatcher;
 import org.ofbiz.service.ServiceUtil;
 import org.ofbiz.service.calendar.TemporalExpression;
 import org.ofbiz.service.calendar.TemporalExpressionWorker;
+
+import com.ibm.icu.util.Calendar;
 
 /**
  * WorkEffortServices - WorkEffort related Services
@@ -63,11 +69,13 @@ import org.ofbiz.service.calendar.TemporalExpressionWorker;
 public class WorkEffortServices {
 
     public static final String module = WorkEffortServices.class.getName();
+    public static final String resourceError = "WorkEffortUiLabels";
 
     public static Map<String, Object> getWorkEffortAssignedEventsForRole(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
         String roleTypeId = (String) context.get("roleTypeId");
+        Locale locale = (Locale) context.get("locale");
 
         List<GenericValue> validWorkEfforts = null;
 
@@ -82,13 +90,14 @@ public class WorkEffortServices {
                         EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "CAL_DELEGATED"),
                         EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "CAL_COMPLETED"),
                         EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "CAL_CANCELLED")
-                );
+               );
                 validWorkEfforts = EntityUtil.filterByDate(
                         delegator.findList("WorkEffortAndPartyAssign", ecl, null, UtilMisc.toList("estimatedStartDate", "priority"), null, false)
-                );
+               );
             } catch (GenericEntityException e) {
                 Debug.logWarning(e, module);
-                return ServiceUtil.returnError("Error finding desired WorkEffort records: " + e.toString());
+                return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                        "WorkEffortNotFound", UtilMisc.toMap("errorString", e.toString()), locale));
             }
         }
 
@@ -101,10 +110,11 @@ public class WorkEffortServices {
     }
 
     public static Map<String, Object> getWorkEffortAssignedEventsForRoleOfAllParties(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         String roleTypeId = (String) context.get("roleTypeId");
+        Locale locale = (Locale) context.get("locale");
 
-        List validWorkEfforts = null;
+        List<GenericValue> validWorkEfforts = null;
 
         try {
             List<EntityExpr> conditionList = FastList.newInstance();
@@ -118,10 +128,11 @@ public class WorkEffortServices {
             EntityConditionList<EntityExpr> ecl = EntityCondition.makeCondition(conditionList, EntityOperator.AND);
             validWorkEfforts = EntityUtil.filterByDate(
                     delegator.findList("WorkEffortAndPartyAssign", ecl, null, UtilMisc.toList("estimatedStartDate", "priority"), null, false)
-            );
+           );
         } catch (GenericEntityException e) {
             Debug.logWarning(e, module);
-            return ServiceUtil.returnError("Error finding desired WorkEffort records: " + e.toString());
+            return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                    "WorkEffortNotFound", UtilMisc.toMap("errorString", e.toString()), locale));
         }
 
         Map<String, Object> result = FastMap.newInstance();
@@ -133,8 +144,9 @@ public class WorkEffortServices {
     }
 
     public static Map<String, Object> getWorkEffortAssignedTasks(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
+        Locale locale = (Locale) context.get("locale");
 
         List<GenericValue> validWorkEfforts = null;
 
@@ -160,19 +172,22 @@ public class WorkEffortServices {
                 validWorkEfforts.addAll(EntityUtil.filterByDate(delegator.findList("WorkEffortAndPartyAssign", ecl, null, UtilMisc.toList("createdDate DESC"), null, false)));
             } catch (GenericEntityException e) {
                 Debug.logWarning(e, module);
-                return ServiceUtil.returnError("Error finding desired WorkEffort records: " + e.toString());
+                return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                        "WorkEffortNotFound", UtilMisc.toMap("errorString", e.toString()), locale));
             }
         }
 
         Map<String, Object> result = FastMap.newInstance();
         if (validWorkEfforts == null) validWorkEfforts = FastList.newInstance();
+        validWorkEfforts = WorkEffortWorker.removeDuplicateWorkEfforts(validWorkEfforts);
         result.put("tasks", validWorkEfforts);
         return result;
     }
 
     public static Map<String, Object> getWorkEffortAssignedActivities(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
+        Locale locale = (Locale) context.get("locale");
 
         List<GenericValue> validWorkEfforts = null;
 
@@ -195,7 +210,8 @@ public class WorkEffortServices {
                 validWorkEfforts = EntityUtil.filterByDate(delegator.findList("WorkEffortAndPartyAssign", ecl, null, UtilMisc.toList("priority"), null, false));
             } catch (GenericEntityException e) {
                 Debug.logWarning(e, module);
-                return ServiceUtil.returnError("Error finding desired WorkEffort records: " + e.toString());
+                return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                        "WorkEffortNotFound", UtilMisc.toMap("errorString", e.toString()), locale));
             }
         }
 
@@ -206,8 +222,9 @@ public class WorkEffortServices {
     }
 
     public static Map<String, Object> getWorkEffortAssignedActivitiesByRole(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
+        Locale locale = (Locale) context.get("locale");
 
         List<GenericValue> roleWorkEfforts = null;
 
@@ -229,10 +246,11 @@ public class WorkEffortServices {
                 EntityConditionList<EntityExpr> ecl = EntityCondition.makeCondition(constraints);
                 roleWorkEfforts = EntityUtil.filterByDate(
                         delegator.findList("WorkEffortPartyAssignByRole", ecl, null, UtilMisc.toList("priority"), null, false)
-                );
+               );
             } catch (GenericEntityException e) {
                 Debug.logWarning(e, module);
-                return ServiceUtil.returnError("Error finding desired WorkEffort records: " + e.toString());
+                return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                        "WorkEffortNotFound", UtilMisc.toMap("errorString", e.toString()), locale));
             }
         }
 
@@ -243,8 +261,9 @@ public class WorkEffortServices {
     }
 
     public static Map<String, Object> getWorkEffortAssignedActivitiesByGroup(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
+        Locale locale = (Locale) context.get("locale");
 
         List<GenericValue> groupWorkEfforts = null;
 
@@ -266,10 +285,11 @@ public class WorkEffortServices {
                 EntityConditionList<EntityExpr> ecl = EntityCondition.makeCondition(constraints);
                 groupWorkEfforts = EntityUtil.filterByDate(
                         delegator.findList("WorkEffortPartyAssignByGroup", ecl, null, UtilMisc.toList("priority"), null, false)
-                );
+               );
             } catch (GenericEntityException e) {
                 Debug.logWarning(e, module);
-                return ServiceUtil.returnError("Error finding desired WorkEffort records: " + e.toString());
+                return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                        "WorkEffortNotFound", UtilMisc.toMap("errorString", e.toString()), locale));
             }
         }
 
@@ -280,7 +300,7 @@ public class WorkEffortServices {
     }
 
     public static Map<String, Object> getWorkEffort(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
         Security security = ctx.getSecurity();
         Map<String, Object> resultMap = FastMap.newInstance();
@@ -295,7 +315,7 @@ public class WorkEffortServices {
         }
 
         Boolean canView = null;
-        Collection workEffortPartyAssignments = null;
+        List<GenericValue> workEffortPartyAssignments = null;
         Boolean tryEntity = null;
         GenericValue currentStatus = null;
 
@@ -305,23 +325,23 @@ public class WorkEffortServices {
 
             String statusId = (String) context.get("currentStatusId");
 
-            if (statusId != null && statusId.length() > 0) {
+            if (UtilValidate.isNotEmpty(statusId)) {
                 try {
-                    currentStatus = delegator.findByPrimaryKeyCache("StatusItem", UtilMisc.toMap("statusId", statusId));
+                    currentStatus = delegator.findOne("StatusItem", UtilMisc.toMap("statusId", statusId), true);
                 } catch (GenericEntityException e) {
                     Debug.logWarning(e, module);
                 }
             }
         } else {
-            // get a collection of workEffortPartyAssignments, if empty then this user CANNOT view the event, unless they have permission to view all
+            // get a list of workEffortPartyAssignments, if empty then this user CANNOT view the event, unless they have permission to view all
             if (userLogin != null && userLogin.get("partyId") != null && workEffortId != null) {
                 try {
-                    workEffortPartyAssignments = delegator.findByAnd("WorkEffortPartyAssignment", UtilMisc.toMap("workEffortId", workEffortId, "partyId", userLogin.get("partyId")));
+                    workEffortPartyAssignments = delegator.findByAnd("WorkEffortPartyAssignment", UtilMisc.toMap("workEffortId", workEffortId, "partyId", userLogin.get("partyId")), null, false);
                 } catch (GenericEntityException e) {
                     Debug.logWarning(e, module);
                 }
             }
-            canView = (workEffortPartyAssignments != null && workEffortPartyAssignments.size() > 0) ? Boolean.TRUE : Boolean.FALSE;
+            canView = (UtilValidate.isNotEmpty(workEffortPartyAssignments)) ? Boolean.TRUE : Boolean.FALSE;
             if (!canView.booleanValue() && security.hasEntityPermission("WORKEFFORTMGR", "_VIEW", userLogin)) {
                 canView = Boolean.TRUE;
             }
@@ -330,7 +350,7 @@ public class WorkEffortServices {
 
             if (workEffort.get("currentStatusId") != null) {
                 try {
-                    currentStatus = delegator.findByPrimaryKeyCache("StatusItem", UtilMisc.toMap("statusId", workEffort.get("currentStatusId")));
+                    currentStatus = delegator.findOne("StatusItem", UtilMisc.toMap("statusId", workEffort.get("currentStatusId")), true);
                 } catch (GenericEntityException e) {
                     Debug.logWarning(e, module);
                 }
@@ -346,28 +366,68 @@ public class WorkEffortServices {
         return resultMap;
     }
 
-    private static List<EntityCondition> getDefaultWorkEffortExprList(Collection<String> partyIds, String facilityId, String fixedAssetId, String workEffortTypeId) {
-        List<EntityCondition> entityExprList = UtilMisc.<EntityCondition>toList(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "CAL_CANCELLED"), EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_CANCELLED"));
+    private static TreeMap<DateRange, List<Map<String, Object>>> groupCalendarEntriesByDateRange(DateRange inDateRange, List<Map<String, Object>> calendarEntries) {
+        TreeMap<DateRange, List<Map<String, Object>>> calendarEntriesByDateRange = new TreeMap<DateRange, List<Map<String, Object>>>();
+        TreeSet<Date> dateBoundaries = new TreeSet<Date>();
+        if (inDateRange != null) {
+            dateBoundaries.add(inDateRange.start());
+            dateBoundaries.add(inDateRange.end());
+        }
+        for (Map<String, Object>calendarEntry: calendarEntries) {
+            DateRange calEntryRange = (DateRange)calendarEntry.get("calEntryRange");
+            dateBoundaries.add(calEntryRange.start());
+            dateBoundaries.add(calEntryRange.end());
+        }
+        Date prevDateBoundary = null;
+        for (Date dateBoundary: dateBoundaries) {
+            if (prevDateBoundary != null) {
+                DateRange dateRange = new DateRange(prevDateBoundary, dateBoundary);
+                for (Map<String, Object>calendarEntry: calendarEntries) {
+                    DateRange calEntryRange = (DateRange)calendarEntry.get("calEntryRange");
+                    if (calEntryRange.intersectsRange(dateRange) && !(calEntryRange.end().equals(dateRange.start()) || calEntryRange.start().equals(dateRange.end()))) {
+                        List<Map<String, Object>> calendarEntryByDateRangeList = calendarEntriesByDateRange.get(dateRange);
+                        if (calendarEntryByDateRangeList == null) {
+                            calendarEntryByDateRangeList = FastList.newInstance();
+                        }
+                        calendarEntryByDateRangeList.add(calendarEntry);
+                        calendarEntriesByDateRange.put(dateRange, calendarEntryByDateRangeList);
+                    }
+                }
+            }
+            prevDateBoundary = dateBoundary;
+        }
+        return calendarEntriesByDateRange;
+    }
+
+    private static List<EntityCondition> getDefaultWorkEffortExprList(String calendarType, Collection<String> partyIds, String workEffortTypeId, List<EntityCondition> cancelledCheckAndList) {
+        List<EntityCondition> entityExprList = FastList.newInstance();
+        if (cancelledCheckAndList != null) {
+            entityExprList.addAll(cancelledCheckAndList);
+        }
         List<EntityExpr> typesList = FastList.newInstance();
         if (UtilValidate.isNotEmpty(workEffortTypeId)) {
             typesList.add(EntityCondition.makeCondition("workEffortTypeId", EntityOperator.EQUALS, workEffortTypeId));
         }
-        if (UtilValidate.isNotEmpty(partyIds)) {
-            entityExprList.add(EntityCondition.makeCondition("partyId", EntityOperator.IN, partyIds));
+        if ("CAL_PERSONAL".equals(calendarType)) {
+            // public events are always included to the "personal calendar"
+            List<EntityCondition> publicEvents = UtilMisc.<EntityCondition>toList(
+                    EntityCondition.makeCondition("scopeEnumId", EntityOperator.EQUALS, "WES_PUBLIC"),
+                    EntityCondition.makeCondition("parentTypeId", EntityOperator.EQUALS, "EVENT")
+                    );
+            if (UtilValidate.isNotEmpty(partyIds)) {
+                entityExprList.add(
+                        EntityCondition.makeCondition(UtilMisc.toList(
+                                EntityCondition.makeCondition("partyId", EntityOperator.IN, partyIds),
+                                EntityCondition.makeCondition(publicEvents, EntityJoinOperator.AND)
+                        ), EntityJoinOperator.OR));
+            }
         }
-        if (UtilValidate.isNotEmpty(facilityId)) {
-            entityExprList.add(EntityCondition.makeCondition("facilityId", EntityOperator.EQUALS, facilityId));
-            typesList.add(EntityCondition.makeCondition("workEffortTypeId", EntityOperator.EQUALS, "PROD_ORDER_HEADER"));
-            entityExprList.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_CREATED"));
-            entityExprList.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_COMPLETED"));
-            entityExprList.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_CLOSED"));
-        }
-        if (UtilValidate.isNotEmpty(fixedAssetId)) {
-            entityExprList.add(EntityCondition.makeCondition("fixedAssetId", EntityOperator.EQUALS, fixedAssetId));
-//            typesList.add(EntityCondition.makeCondition("workEffortTypeId", EntityOperator.EQUALS, "PROD_ORDER_TASK"));
-            entityExprList.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_CREATED"));
-            entityExprList.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_COMPLETED"));
-            entityExprList.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_CLOSED"));
+        if ("CAL_MANUFACTURING".equals(calendarType)) {
+            entityExprList.add(
+                    EntityCondition.makeCondition(UtilMisc.toList(
+                            EntityCondition.makeCondition("workEffortTypeId", EntityOperator.EQUALS, "PROD_ORDER_HEADER"),
+                            EntityCondition.makeCondition("workEffortTypeId", EntityOperator.EQUALS, "PROD_ORDER_TASK")
+                    ), EntityJoinOperator.OR));
         }
         EntityCondition typesCondition = null;
         if (typesList.size() == 0) {
@@ -420,8 +480,25 @@ public class WorkEffortServices {
      * </ul>
      * </ul>
      */
+
     public static Map<String, Object> getWorkEffortEventsByPeriod(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+
+        /*
+         To create testdata for  this function for  fixedasset/facility
+
+        1) go to Manufacturing -> JobShop, then click on "create new Production run":
+                https://localhost:8443/manufacturing/control/CreateProductionRun
+        2) enter as productId "PROD_MANUF", quantity 1, start date tomorrow and press the submit button
+    `    3) in the next screen, click on the "Confirm" link (top part of the sccreen)
+
+        Now you have a confirmed production run (starting tomorrow) happening in facility "WebStoreWarehouse",
+        with a task happening in fixed asset "WORKCENTER_COST"
+
+        In the calendars screen, selecting the proper facility you should see the work effort associated to the production run;
+        if you select the proper fixed asset you should see the task.
+
+         */
+        Delegator delegator = ctx.getDelegator();
         Security security = ctx.getSecurity();
         GenericValue userLogin = (GenericValue) context.get("userLogin");
         Locale locale = (Locale) context.get("locale");
@@ -430,10 +507,17 @@ public class WorkEffortServices {
         Timestamp startDay = (Timestamp) context.get("start");
         Integer numPeriodsInteger = (Integer) context.get("numPeriods");
 
+        String calendarType = (String) context.get("calendarType");
+        if (UtilValidate.isEmpty(calendarType)) {
+            // This is a bad idea. This causes the service to return only those work efforts that are assigned
+            // to the current user even when the service parameters have nothing to do with the current user.
+            calendarType = "CAL_PERSONAL";
+        }
         String partyId = (String) context.get("partyId");
         Collection<String> partyIds = UtilGenerics.checkCollection(context.get("partyIds"));
         String facilityId = (String) context.get("facilityId");
         String fixedAssetId = (String) context.get("fixedAssetId");
+        // Debug.logInfo("======by period for fixedAsset: " + fixedAssetId + " facilityId: " + facilityId + "partyId: " + partyId + " entityExprList:" + (List) context.get("entityExprList"));
         String workEffortTypeId = (String) context.get("workEffortTypeId");
         Boolean filterOutCanceledEvents = (Boolean) context.get("filterOutCanceledEvents");
         if (filterOutCanceledEvents == null) {
@@ -455,7 +539,9 @@ public class WorkEffortServices {
         }
 
         // get a timestamp (date) for the beginning of today and for beginning of numDays+1 days from now
-        Timestamp startStamp = UtilDateTime.getDayStart(startDay, timeZone, locale);
+        // Commenting this out because it interferes with periods that do not start at the beginning of the day
+        // Timestamp startStamp = UtilDateTime.getDayStart(startDay, timeZone, locale);
+        Timestamp startStamp = startDay;
         Timestamp endStamp = UtilDateTime.adjustTimestamp(startStamp, periodType, 1, timeZone, locale);
         long periodLen = endStamp.getTime() - startStamp.getTime();
         endStamp = UtilDateTime.adjustTimestamp(startStamp, periodType, numPeriods, timeZone, locale);
@@ -470,42 +556,102 @@ public class WorkEffortServices {
             if (partyId.equals(userLogin.getString("partyId")) || security.hasEntityPermission("WORKEFFORTMGR", "_VIEW", userLogin)) {
                 partyIdsToUse.add(partyId);
             } else {
-                return ServiceUtil.returnError("You do not have permission to view information for party with ID [" + partyId + "], you must be logged in as a user associated with this party, or have the WORKEFFORTMGR_VIEW or WORKEFFORTMGR_ADMIN permissions.");
+                return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                        "WorkEffortPartyPermissionError", UtilMisc.toMap("partyId", partyId), locale));
             }
         } else {
-            // if a facilityId or a fixedAssetId are not specified, don't set a default partyId...
-            if (UtilValidate.isEmpty(facilityId) && UtilValidate.isEmpty(fixedAssetId) && UtilValidate.isNotEmpty(userLogin.getString("partyId"))) {
+            if ("CAL_PERSONAL".equals(calendarType) && UtilValidate.isNotEmpty(userLogin.getString("partyId"))) {
                 partyIdsToUse.add(userLogin.getString("partyId"));
             }
         }
+
+        // cancelled status id's
+        List<EntityCondition> cancelledCheckAndList = UtilMisc.<EntityCondition>toList(
+                EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "EVENT_CANCELLED"),
+                EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "CAL_CANCELLED"),
+                EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "PRUN_CANCELLED"));
+
+
         List<EntityCondition> entityExprList = UtilGenerics.checkList(context.get("entityExprList"));
         if (entityExprList == null) {
-            entityExprList = getDefaultWorkEffortExprList(partyIdsToUse, facilityId, fixedAssetId, workEffortTypeId);
+            entityExprList = getDefaultWorkEffortExprList(calendarType, partyIdsToUse, workEffortTypeId, cancelledCheckAndList);
         }
-        entityExprList.add(EntityCondition.makeCondition("estimatedStartDate", EntityOperator.LESS_THAN, endStamp));
-        List<EntityCondition> completionExprList = UtilMisc.<EntityCondition>toList(EntityCondition.makeCondition("estimatedCompletionDate", EntityOperator.GREATER_THAN_EQUAL_TO, startStamp), EntityCondition.makeCondition("estimatedCompletionDate", EntityOperator.EQUALS, null));
-        entityExprList.add(EntityCondition.makeCondition(completionExprList, EntityJoinOperator.OR));
+
+        if (UtilValidate.isNotEmpty(facilityId)) {
+            entityExprList.add(EntityCondition.makeCondition("facilityId", EntityOperator.EQUALS, facilityId));
+        }
+        if (UtilValidate.isNotEmpty(fixedAssetId)) {
+            entityExprList.add(EntityCondition.makeCondition("fixedAssetId", EntityOperator.EQUALS, fixedAssetId));
+        }
+
+        // should have at least a start date
+        EntityCondition startDateRequired = EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                EntityCondition.makeCondition("estimatedStartDate", EntityOperator.NOT_EQUAL, null),
+                EntityCondition.makeCondition("actualStartDate", EntityOperator.NOT_EQUAL, null)
+        ), EntityJoinOperator.OR);
+
+        List<EntityCondition> periodCheckAndlList = UtilMisc.<EntityCondition>toList(
+                startDateRequired,
+                // the startdate should be less than the period end
+                EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                        EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                                EntityCondition.makeCondition("actualStartDate", EntityOperator.EQUALS, null),
+                                EntityCondition.makeCondition("estimatedStartDate", EntityOperator.NOT_EQUAL, null),
+                                EntityCondition.makeCondition("estimatedStartDate", EntityOperator.LESS_THAN_EQUAL_TO, endStamp)
+                        ), EntityJoinOperator.AND),
+                        EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                                EntityCondition.makeCondition("actualStartDate", EntityOperator.NOT_EQUAL, null),
+                                EntityCondition.makeCondition("actualStartDate", EntityOperator.LESS_THAN_EQUAL_TO, endStamp)
+                        ), EntityJoinOperator.AND)
+                ), EntityJoinOperator.OR),
+                // if the completion date is not null then it should be larger than the period start
+                EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                        // can also be empty
+                        EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                                EntityCondition.makeCondition("estimatedCompletionDate", EntityOperator.EQUALS, null),
+                                EntityCondition.makeCondition("actualCompletionDate", EntityOperator.EQUALS, null)
+                        ), EntityJoinOperator.AND),
+                        // check estimated value if the actual is not provided
+                        EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                                EntityCondition.makeCondition("actualCompletionDate", EntityOperator.EQUALS, null),
+                                EntityCondition.makeCondition("estimatedCompletionDate", EntityOperator.NOT_EQUAL, null),
+                                EntityCondition.makeCondition("estimatedCompletionDate", EntityOperator.GREATER_THAN_EQUAL_TO, startStamp)
+                        ), EntityJoinOperator.AND),
+                        // at last check the actual value
+                        EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(
+                                EntityCondition.makeCondition("actualCompletionDate", EntityOperator.NOT_EQUAL, null),
+                                EntityCondition.makeCondition("actualCompletionDate", EntityOperator.GREATER_THAN_EQUAL_TO, startStamp)
+                        ), EntityJoinOperator.AND)
+                ), EntityJoinOperator.OR));
+
+        entityExprList.addAll(periodCheckAndlList);
+
+        // (non cancelled) recurring events
+        /* Commenting this out. This condition adds ALL recurring events to ALL calendars.
+        List<EntityCondition> recurringEvents = UtilMisc.<EntityCondition>toList(EntityCondition.makeCondition("tempExprId", EntityOperator.NOT_EQUAL, null));
         if (filterOutCanceledEvents.booleanValue()) {
-            entityExprList.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.NOT_EQUAL, "EVENT_CANCELLED"));
+            recurringEvents.addAll(cancelledCheckAndList);
         }
-        EntityConditionList<EntityCondition> ecl = EntityCondition.makeCondition(entityExprList);
+        */
+
+        EntityCondition eclTotal = EntityCondition.makeCondition(entityExprList, EntityJoinOperator.AND);
+
         List<String> orderByList = UtilMisc.toList("estimatedStartDate");
-        if (partyIdsToUse.size() > 0 || UtilValidate.isNotEmpty(facilityId) || UtilValidate.isNotEmpty(fixedAssetId)) {
-            try {
-                List<GenericValue> tempWorkEfforts = null;
-                if (UtilValidate.isNotEmpty(partyIdsToUse)) {
-                    tempWorkEfforts = EntityUtil.filterByDate(delegator.findList("WorkEffortAndPartyAssign", ecl, null, orderByList, null, false));
-                } else if (UtilValidate.isNotEmpty(fixedAssetId)) {
-                    // Get "old style" work efforts and "new style" work efforts
-                    tempWorkEfforts = delegator.findList("WorkEffort", ecl, null, orderByList, null, false);
-                    tempWorkEfforts.addAll(EntityUtil.filterByDate(delegator.findList("WorkEffortAndFixedAssetAssign", ecl, null, orderByList, null, false)));
-                } else {
-                    tempWorkEfforts = delegator.findList("WorkEffort", ecl, null, UtilMisc.toList("estimatedStartDate"), null, false);
-                }
-                validWorkEfforts = WorkEffortWorker.removeDuplicateWorkEfforts(tempWorkEfforts);
-            } catch (GenericEntityException e) {
-                Debug.logWarning(e, module);
+        try {
+            List<GenericValue> tempWorkEfforts = null;
+            if (UtilValidate.isNotEmpty(partyIdsToUse)) {
+                // Debug.logInfo("=====conditions for party: " + eclTotal);
+                tempWorkEfforts = EntityUtil.filterByDate(delegator.findList("WorkEffortAndPartyAssignAndType", eclTotal, null, orderByList, null, false));
+            } else {
+                tempWorkEfforts = delegator.findList("WorkEffort", eclTotal, null, orderByList, null, false);
             }
+            if (!"CAL_PERSONAL".equals(calendarType) && UtilValidate.isNotEmpty(fixedAssetId)) {
+                // Get "new style" work efforts
+                tempWorkEfforts.addAll(EntityUtil.filterByDate(delegator.findList("WorkEffortAndFixedAssetAssign", eclTotal, null, orderByList, null, false)));
+            }
+            validWorkEfforts = WorkEffortWorker.removeDuplicateWorkEfforts(tempWorkEfforts);
+        } catch (GenericEntityException e) {
+            Debug.logWarning(e, module);
         }
 
         // Split the WorkEffort list into a map with entries for each period, period start is the key
@@ -526,15 +672,18 @@ public class WorkEffortServices {
                 Calendar cal = UtilDateTime.toCalendar(startStamp, timeZone, locale);
                 for (GenericValue workEffort : validWorkEfforts) {
                     if (UtilValidate.isNotEmpty(workEffort.getString("tempExprId"))) {
+                        // check if either the workeffort is public or the requested party is a member
+                        if (UtilValidate.isNotEmpty(partyIdsToUse) && !"WES_PUBLIC".equals(workEffort.getString("scopeEnumId")) && !partyIdsToUse.contains(workEffort.getString("partyId"))) {
+                            continue;
+                        }
                         TemporalExpression tempExpr = TemporalExpressionWorker.getTemporalExpression(delegator, workEffort.getString("tempExprId"));
                         Set<Date> occurrences = tempExpr.getRange(range, cal);
                         for (Date occurrence : occurrences) {
                             for (DateRange periodRange : periodRanges) {
                                 if (periodRange.includesDate(occurrence)) {
                                     GenericValue cloneWorkEffort = (GenericValue) workEffort.clone();
-                                    Double durationMillis = workEffort.getDouble("estimatedMilliSeconds");
-                                    if (durationMillis != null) {
-                                        TimeDuration duration = TimeDuration.fromLong(durationMillis.longValue());
+                                    TimeDuration duration = TimeDuration.fromNumber(workEffort.getDouble("estimatedMilliSeconds"));
+                                    if (!duration.isZero()) {
                                         Calendar endCal = UtilDateTime.toCalendar(occurrence, timeZone, locale);
                                         Date endDate = duration.addToCalendar(endCal).getTime();
                                         cloneWorkEffort.set("estimatedStartDate", new Timestamp(occurrence.getTime()));
@@ -562,13 +711,27 @@ public class WorkEffortServices {
                 List<Map<String, Object>> curWorkEfforts = FastList.newInstance();
                 Map<String, Object> entry = FastMap.newInstance();
                 for (GenericValue workEffort : validWorkEfforts) {
-                    DateRange weRange = new DateRange(workEffort.getTimestamp("estimatedStartDate"), workEffort.getTimestamp("estimatedCompletionDate"));
+                    Timestamp startDate = workEffort.getTimestamp("estimatedStartDate");
+                    if (workEffort.getTimestamp("actualStartDate") != null) {
+                        startDate = workEffort.getTimestamp("actualStartDate");
+                    }
+                    Timestamp endDate = workEffort.getTimestamp("estimatedCompletionDate");
+                    if (workEffort.getTimestamp("actualCompletionDate") != null) {
+                        endDate = workEffort.getTimestamp("actualCompletionDate");
+                    }
+                    if (endDate == null) endDate = startDate;
+                    DateRange weRange = new DateRange(startDate, endDate);
                     if (periodRange.intersectsRange(weRange)) {
                         Map<String, Object> calEntry = FastMap.newInstance();
                         calEntry.put("workEffort", workEffort);
                         long length = ((weRange.end().after(endStamp) ? endStamp.getTime() : weRange.end().getTime()) - (weRange.start().before(startStamp) ? startStamp.getTime() : weRange.start().getTime()));
                         int periodSpan = (int) Math.ceil((double) length / periodLen);
+                        if (length % periodLen == 0 && startDate.getTime() > periodRange.start().getTime()) {
+                            periodSpan++;
+                        }
                         calEntry.put("periodSpan", Integer.valueOf(periodSpan));
+                        DateRange calEntryRange = new DateRange((weRange.start().before(startStamp) ? startStamp : weRange.start()), (weRange.end().after(endStamp) ? endStamp : weRange.end()));
+                        calEntry.put("calEntryRange", calEntryRange);
                         if (firstEntry) {
                             // If this is the first period any valid entry is starting here
                             calEntry.put("startOfPeriod", Boolean.TRUE);
@@ -587,6 +750,7 @@ public class WorkEffortServices {
                 entry.put("start", periodRange.startStamp());
                 entry.put("end", periodRange.endStamp());
                 entry.put("calendarEntries", curWorkEfforts);
+                entry.put("calendarEntriesByDateRange", groupCalendarEntriesByDateRange(periodRange, curWorkEfforts));
                 periods.add(entry);
             }
         }
@@ -597,9 +761,10 @@ public class WorkEffortServices {
     }
 
     public static Map<String, Object> getProductManufacturingSummaryByFacility(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
         String productId = (String) context.get("productId");
         String facilityId = (String) context.get("facilityId"); // optional
+        Locale locale = (Locale) context.get("locale");
 
         Map<String, Map<String, Object>> summaryInByFacility = FastMap.newInstance();
         Map<String, Map<String, Object>> summaryOutByFacility = FastMap.newInstance();
@@ -622,18 +787,17 @@ public class WorkEffortServices {
             findIncomingProductionRunsStatusConds.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.EQUALS, "PRUN_SCHEDULED"));
             findIncomingProductionRunsStatusConds.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.EQUALS, "PRUN_DOC_PRINTED"));
             findIncomingProductionRunsStatusConds.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.EQUALS, "PRUN_RUNNING"));
-            findIncomingProductionRunsStatusConds.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.EQUALS, "PRUN_COMPLETED"));
             findIncomingProductionRunsConds.add(EntityCondition.makeCondition(findIncomingProductionRunsStatusConds, EntityOperator.OR));
 
-            EntityConditionList findIncomingProductionRunsCondition = EntityCondition.makeCondition(findIncomingProductionRunsConds, EntityOperator.AND);
+            EntityConditionList<EntityCondition> findIncomingProductionRunsCondition = EntityCondition.makeCondition(findIncomingProductionRunsConds, EntityOperator.AND);
 
             List<GenericValue> incomingProductionRuns = delegator.findList("WorkEffortAndGoods", findIncomingProductionRunsCondition, null, UtilMisc.toList("-estimatedCompletionDate"), null, false);
             for (GenericValue incomingProductionRun: incomingProductionRuns) {
                 double producedQtyTot = 0.0;
                 if (incomingProductionRun.getString("currentStatusId").equals("PRUN_COMPLETED")) {
-                    List<GenericValue> inventoryItems = delegator.findByAnd("WorkEffortAndInventoryProduced", UtilMisc.toMap("productId", productId, "workEffortId", incomingProductionRun.getString("workEffortId")));
+                    List<GenericValue> inventoryItems = delegator.findByAnd("WorkEffortAndInventoryProduced", UtilMisc.toMap("productId", productId, "workEffortId", incomingProductionRun.getString("workEffortId")), null, false);
                     for (GenericValue inventoryItem: inventoryItems) {
-                        GenericValue inventoryItemDetail = EntityUtil.getFirst(delegator.findByAnd("InventoryItemDetail", UtilMisc.toMap("inventoryItemId", inventoryItem.getString("inventoryItemId")), UtilMisc.toList("inventoryItemDetailSeqId")));
+                        GenericValue inventoryItemDetail = EntityUtil.getFirst(delegator.findByAnd("InventoryItemDetail", UtilMisc.toMap("inventoryItemId", inventoryItem.getString("inventoryItemId")), UtilMisc.toList("inventoryItemDetailSeqId"), false));
                         if (inventoryItemDetail != null && inventoryItemDetail.get("quantityOnHandDiff") != null) {
                             Double inventoryItemQty = inventoryItemDetail.getDouble("quantityOnHandDiff");
                             producedQtyTot = producedQtyTot + inventoryItemQty.doubleValue();
@@ -692,7 +856,7 @@ public class WorkEffortServices {
             findOutgoingProductionRunsStatusConds.add(EntityCondition.makeCondition("currentStatusId", EntityOperator.EQUALS, "PRUN_RUNNING"));
             findOutgoingProductionRunsConds.add(EntityCondition.makeCondition(findOutgoingProductionRunsStatusConds, EntityOperator.OR));
 
-            EntityConditionList findOutgoingProductionRunsCondition = EntityCondition.makeCondition(findOutgoingProductionRunsConds, EntityOperator.AND);
+            EntityConditionList<EntityCondition> findOutgoingProductionRunsCondition = EntityCondition.makeCondition(findOutgoingProductionRunsConds, EntityOperator.AND);
             List<GenericValue> outgoingProductionRuns = delegator.findList("WorkEffortAndGoods", findOutgoingProductionRunsCondition, null, UtilMisc.toList("-estimatedStartDate"), null, false);
             for (GenericValue outgoingProductionRun: outgoingProductionRuns) {
                 String weFacilityId = outgoingProductionRun.getString("facilityId");
@@ -723,7 +887,8 @@ public class WorkEffortServices {
             }
 
         } catch (GenericEntityException gee) {
-            return ServiceUtil.returnError("Error retrieving manufacturing data for productId [" + productId + "]: " + gee.getMessage());
+            return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                    "WorkEffortManufacturingError", UtilMisc.toMap("productId", productId, "errorString", gee.getMessage()), locale));
         }
         Map<String, Object> resultMap = ServiceUtil.returnSuccess();
         resultMap.put("summaryInByFacility", summaryInByFacility);
@@ -732,36 +897,31 @@ public class WorkEffortServices {
     }
 
     /** Process work effort event reminders. This service is used by the job scheduler.
-     * @param ctx
-     * @param context
-     * @return
+     * @param ctx the dispatch context
+     * @param context the context
+     * @return returns the result of the service execution
      */
     public static Map<String, Object> processWorkEffortEventReminders(DispatchContext ctx, Map<String, ? extends Object> context) {
-        GenericDelegator delegator = ctx.getDelegator();
+        Delegator delegator = ctx.getDelegator();
+        LocalDispatcher dispatcher = ctx.getDispatcher();
+        Locale localePar = (Locale) context.get("locale");
         Timestamp now = new Timestamp(System.currentTimeMillis());
         List<GenericValue> eventReminders = null;
         try {
             eventReminders = delegator.findList("WorkEffortEventReminder", EntityCondition.makeCondition(UtilMisc.<EntityCondition>toList(EntityCondition.makeCondition("reminderDateTime", EntityOperator.EQUALS, null), EntityCondition.makeCondition("reminderDateTime", EntityOperator.LESS_THAN_EQUAL_TO, now)), EntityOperator.OR), null, null, null, false);
         } catch (GenericEntityException e) {
-            return ServiceUtil.returnError("Error while retrieving work effort event reminders: " + e);
+            return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                    "WorkEffortEventRemindersRetrivingError", UtilMisc.toMap("errorString", e), localePar));
         }
         for (GenericValue reminder : eventReminders) {
-            int repeatCount = reminder.get("repeatCount") == null ? 0 : reminder.getLong("repeatCount").intValue();
-            int currentCount = reminder.get("currentCount") == null ? 0 : reminder.getLong("currentCount").intValue();
-            String isPopup = reminder.getString("isPopup");
-            if ("Y".equals(isPopup)) {
-                if (repeatCount != 0 && repeatCount == currentCount) {
-                    try {
-                        reminder.remove();
-                    } catch (GenericEntityException e) {
-                        Debug.logWarning("Error while removing work effort event reminder: " + e, module);
-                    }
-                }
+            if (UtilValidate.isEmpty(reminder.get("contactMechId"))) {
                 continue;
             }
+            int repeatCount = reminder.get("repeatCount") == null ? 0 : reminder.getLong("repeatCount").intValue();
+            int currentCount = reminder.get("currentCount") == null ? 0 : reminder.getLong("currentCount").intValue();
             GenericValue workEffort = null;
             try {
-                workEffort = reminder.getRelatedOne("WorkEffort");
+                workEffort = reminder.getRelatedOne("WorkEffort", false);
             } catch (GenericEntityException e) {
                 Debug.logWarning("Error while getting work effort: " + e, module);
             }
@@ -776,6 +936,9 @@ public class WorkEffortServices {
             Locale locale = reminder.getString("localeId") == null ? Locale.getDefault() : new Locale(reminder.getString("localeId"));
             TimeZone timeZone = reminder.getString("timeZoneId") == null ? TimeZone.getDefault() : TimeZone.getTimeZone(reminder.getString("timeZoneId"));
             Map<String, Object> parameters = UtilMisc.toMap("locale", locale, "timeZone", timeZone, "workEffortId", reminder.get("workEffortId"));
+
+            Map<String, Object> processCtx = UtilMisc.toMap("reminder", reminder, "bodyParameters", parameters, "userLogin", context.get("userLogin"));
+
             Calendar cal = UtilDateTime.toCalendar(now, timeZone, locale);
             Timestamp reminderStamp = reminder.getTimestamp("reminderDateTime");
             Date eventDateTime = workEffort.getTimestamp("estimatedStartDate");
@@ -790,11 +953,11 @@ public class WorkEffortServices {
                 if (temporalExpression != null) {
                     eventDateTime = temporalExpression.first(cal).getTime();
                     Date reminderDateTime = null;
-                    long recurrenceOffset = reminder.get("recurrenceOffset") == null ? 0 : reminder.getLong("recurrenceOffset").longValue();
+                    long reminderOffset = reminder.get("reminderOffset") == null ? 0 : reminder.getLong("reminderOffset").longValue();
                     if (reminderStamp == null) {
-                        if (recurrenceOffset != 0) {
+                        if (reminderOffset != 0) {
                             cal.setTime(eventDateTime);
-                            TimeDuration duration = TimeDuration.fromLong(recurrenceOffset);
+                            TimeDuration duration = TimeDuration.fromLong(reminderOffset);
                             duration.addToCalendar(cal);
                             reminderDateTime = cal.getTime();
                         } else {
@@ -806,28 +969,31 @@ public class WorkEffortServices {
                     if (reminderDateTime.before(now) && reminderStamp != null) {
                         try {
                             parameters.put("eventDateTime", new Timestamp(eventDateTime.getTime()));
-                            processEventReminder(ctx, reminder, parameters);
+
+                            dispatcher.runSync("processWorkEffortEventReminder", processCtx);
                             if (repeatCount != 0 && currentCount + 1 >= repeatCount) {
                                 reminder.remove();
                             } else {
                                 cal.setTime(reminderDateTime);
                                 Date newReminderDateTime = null;
-                                if (recurrenceOffset != 0) {
-                                    TimeDuration duration = TimeDuration.fromLong(-recurrenceOffset);
+                                if (reminderOffset != 0) {
+                                    TimeDuration duration = TimeDuration.fromLong(-reminderOffset);
                                     duration.addToCalendar(cal);
                                     cal.setTime(temporalExpression.next(cal).getTime());
-                                    duration = TimeDuration.fromLong(recurrenceOffset);
+                                    duration = TimeDuration.fromLong(reminderOffset);
                                     duration.addToCalendar(cal);
                                     newReminderDateTime = cal.getTime();
                                 } else {
                                     newReminderDateTime = temporalExpression.next(cal).getTime();
                                 }
-                                reminder.set("currentCount", new Long(currentCount + 1));
+                                reminder.set("currentCount", Long.valueOf(currentCount + 1));
                                 reminder.set("reminderDateTime", new Timestamp(newReminderDateTime.getTime()));
                                 reminder.store();
                             }
                         } catch (GenericEntityException e) {
                             Debug.logWarning("Error while processing temporal expression reminder, id = " + tempExprId + ": " + e, module);
+                        } catch (GenericServiceException e) {
+                            Debug.logError(e, module);
                         }
                     } else if (reminderStamp == null) {
                         try {
@@ -845,21 +1011,22 @@ public class WorkEffortServices {
                 if (reminderDateTime.before(now)) {
                     try {
                         parameters.put("eventDateTime", eventDateTime);
-                        processEventReminder(ctx, reminder, parameters);
-                        long repeatInterval = reminder.get("repeatInterval") == null ? 0 : reminder.getLong("repeatInterval").longValue();
-                        if ((repeatCount != 0 && currentCount + 1 >= repeatCount) || repeatInterval == 0) {
+                        dispatcher.runSync("processWorkEffortEventReminder", processCtx);
+                        TimeDuration duration = TimeDuration.fromNumber(reminder.getLong("repeatInterval"));
+                        if ((repeatCount != 0 && currentCount + 1 >= repeatCount) || duration.isZero()) {
                             reminder.remove();
                         } else {
                             cal.setTime(now);
-                            TimeDuration duration = TimeDuration.fromLong(repeatInterval);
                             duration.addToCalendar(cal);
                             reminderDateTime = cal.getTime();
-                            reminder.set("currentCount", new Long(currentCount + 1));
+                            reminder.set("currentCount", Long.valueOf(currentCount + 1));
                             reminder.set("reminderDateTime", new Timestamp(reminderDateTime.getTime()));
                             reminder.store();
                         }
                     } catch (GenericEntityException e) {
                         Debug.logWarning("Error while processing event reminder: " + e, module);
+                    } catch (GenericServiceException e) {
+                        Debug.logError(e, module);
                     }
                 }
             }
@@ -867,9 +1034,56 @@ public class WorkEffortServices {
         return ServiceUtil.returnSuccess();
     }
 
+    public static Map<String, Object> processWorkEffortEventReminder(DispatchContext dctx, Map<String, ? extends Object> context) {
+        LocalDispatcher dispatcher = dctx.getDispatcher();
+        Delegator delegator = dctx.getDelegator();
+        Map<String, Object> parameters = UtilGenerics.checkMap(context.get("bodyParameters"));
+        GenericValue reminder = (GenericValue) context.get("reminder");
+        GenericValue contactMech = null;
+        try {
+            contactMech = reminder.getRelatedOne("ContactMech", false);
+        } catch (GenericEntityException e) {
+            Debug.logError(e, module);
+        }
+        if (contactMech != null && "EMAIL_ADDRESS".equals(contactMech.get("contactMechTypeId"))) {
+            String toAddress = contactMech.getString("infoString");
+
+            GenericValue emailTemplateSetting = null;
+            try {
+                emailTemplateSetting = delegator.findOne("EmailTemplateSetting", true, "emailTemplateSettingId", "WEFF_EVENT_REMINDER");
+            } catch (GenericEntityException e1) {
+                Debug.logError(e1, module);
+            }
+            if (emailTemplateSetting != null) {
+                Map<String, Object> emailCtx = UtilMisc.toMap("emailTemplateSettingId", "WEFF_EVENT_REMINDER", "sendTo", toAddress, "bodyParameters", parameters);
+                try {
+                    dispatcher.runAsync("sendMailFromTemplateSetting", emailCtx);
+                } catch (Exception e) {
+                    Debug.logWarning("Error while emailing event reminder - workEffortId = " + reminder.get("workEffortId") + ", contactMechId = " + reminder.get("contactMechId") + ": " + e, module);
+                }
+            } else {
+                // TODO: Remove this block after the next release 2010-11-29
+                String screenLocation = UtilProperties.getPropertyValue("EventReminders", "eventReminders.emailScreenWidgetLocation");
+                String fromAddress = UtilProperties.getPropertyValue("EventReminders", "eventReminders.emailFromAddress");
+                String subject = UtilProperties.getMessage("WorkEffortUiLabels", "WorkEffortEventReminder", (Locale) parameters.get("locale"));
+                Map<String, Object> emailCtx = UtilMisc.toMap("sendFrom", fromAddress, "sendTo", toAddress, "subject", subject, "bodyParameters", parameters, "bodyScreenUri", screenLocation);
+                try {
+                    dispatcher.runAsync("sendMailFromScreen", emailCtx);
+                } catch (Exception e) {
+                    Debug.logWarning("Error while emailing event reminder - workEffortId = " + reminder.get("workEffortId") + ", contactMechId = " + reminder.get("contactMechId") + ": " + e, module);
+                }
+            }
+            return ServiceUtil.returnSuccess();
+        }
+        // TODO: Other contact mechanism types
+        Debug.logWarning("Invalid event reminder contact mech, workEffortId = " + reminder.get("workEffortId") + ", contactMechId = " + reminder.get("contactMechId"), module);
+        return ServiceUtil.returnSuccess();
+    }
+
+    @Deprecated
     protected static void processEventReminder(DispatchContext ctx, GenericValue reminder, Map<String, Object> parameters) throws GenericEntityException {
         LocalDispatcher dispatcher = ctx.getDispatcher();
-        GenericValue contactMech = reminder.getRelatedOne("ContactMech");
+        GenericValue contactMech = reminder.getRelatedOne("ContactMech", false);
         if (contactMech != null && "EMAIL_ADDRESS".equals(contactMech.get("contactMechTypeId"))) {
             String screenLocation = UtilProperties.getPropertyValue("EventReminders", "eventReminders.emailScreenWidgetLocation");
             String fromAddress = UtilProperties.getPropertyValue("EventReminders", "eventReminders.emailFromAddress");
@@ -885,5 +1099,68 @@ public class WorkEffortServices {
         }
         // TODO: Other contact mechanism types
         Debug.logWarning("Invalid event reminder contact mech, workEffortId = " + reminder.get("workEffortId") + ", contactMechId = " + reminder.get("contactMechId"), module);
+    }
+
+    /** Migrate work effort event reminders.
+     * @param ctx the dispatch context
+     * @param context the context
+     * @return returns the result of the service execution
+     */
+    public static Map<String, Object> migrateWorkEffortEventReminders(DispatchContext ctx, Map<String, ? extends Object> context) {
+        Delegator delegator = ctx.getDelegator();
+        Locale locale = (Locale) context.get("locale");
+        ModelEntity modelEntity = delegator.getModelEntity("WorkEffortEventReminder");
+        if (modelEntity != null && modelEntity.getField("recurrenceOffset") != null) {
+            List<GenericValue> eventReminders = null;
+            try {
+                eventReminders = delegator.findList("WorkEffortEventReminder", null, null, null, null, false);
+                for (GenericValue reminder : eventReminders) {
+                    if (UtilValidate.isNotEmpty(reminder.get("recurrenceOffset"))) {
+                        reminder.set("reminderOffset", reminder.get("recurrenceOffset"));
+                        reminder.store();
+                    }
+                }
+            } catch (GenericEntityException e) {
+                return ServiceUtil.returnError(UtilProperties.getMessage(resourceError, 
+                        "WorkEffortEventRemindersMigrationError", UtilMisc.toMap("errorString", e), locale));
+            }
+        }
+        return ServiceUtil.returnSuccess();
+    }
+
+    public static Map<String, Object> removeDuplicateWorkEfforts(DispatchContext ctx, Map<String, ? extends Object> context) {
+        List<GenericValue> resultList = null;
+        EntityListIterator eli = (EntityListIterator) context.get("workEffortIterator");
+        if (eli != null) {
+            try {
+                Set<String> keys = FastSet.newInstance();
+                resultList = FastList.newInstance();
+                GenericValue workEffort = eli.next();
+                while (workEffort != null) {
+                    String workEffortId = workEffort.getString("workEffortId");
+                    if (!keys.contains(workEffortId)) {
+                        resultList.add(workEffort);
+                        keys.add(workEffortId);
+                    }
+                    workEffort = eli.next();
+                }
+            } catch (Exception e) {
+                Debug.logError(e, module);
+            } finally {
+                try {
+                    eli.close();
+                } catch (GenericEntityException e) {
+                    Debug.logError(e, "Error while closing EntityListIterator: ", module);
+                }
+            }
+        } else {
+            List<GenericValue> workEfforts = UtilGenerics.checkList(context.get("workEfforts"));
+            if (workEfforts != null) {
+                resultList = WorkEffortWorker.removeDuplicateWorkEfforts(workEfforts);
+            }
+        }
+        Map<String, Object> result = ServiceUtil.returnSuccess();
+        result.put("workEfforts", resultList);
+        return result;
     }
 }
